# searcher-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  quality-check.py  start_agent.py  start_api.py  start_bot.py  test_search.py  trace_imports.py
.github/workflows/: docs.yml
agent/: __init__.py  agent.py  ai_agent.py  main.py  manager.py  schemas.py
agent/browsing/: __init__.py  manual.py
agent/browsing/manual/: __init__.py
agent/browsing/tools/: __init__.py  arxiv.py  duckduckgo.py  github.py  google_scholar.py  pubmed.py
agent/pipeline/: __init__.py  analyze.py  decision.py  formatting.py  models.py  pipeline.py  ranking.py  search.py  strategy.py  utils.py
api/: __init__.py  app.py
bot/: __init__.py  dispatcher.py  main.py  telegram_bot.py  utils.py
bot/docs/: telegram_html.md
bot/handlers/: __init__.py  general.py  management.py  settings.py  task.py  tasks.py
bot/handlers/notifications/: __init__.py  handlers.py  service.py
bot/handlers/settings/: __init__.py
docs/: conf.py  contributing.md  for-everyone.md  getting-started.md  index.md  usage.md  use-cases.md
docs/_static/: floating-button.css  floating-button.js
docs/api/: modules.rst
docs/api/agent/: browsing.rst  index.rst  manager.rst  pipeline.rst
docs/api/api/: app.rst  index.rst
shared/: __init__.py  arxiv_parser.py  database.py  db.py  event_system.py  llm.py  logger.py
shared/database/: __init__.py  connection.py  enums.py  models.py  operations.py
tests/: conftest.py  test_api.py  test_manual_sources.py  test_pipeline_sources.py
(+75 files in other folders)
