[project]
name = "searcher-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # "asyncio-mqtt",
    "aiogram>=3.21.0",
    "openai-agents>=0.2.4",
    "openai>=1.98.0",
    "peewee>=3.18.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "arxiv>=2.1.3",
    "feedparser>=6.0.11",
    "PyPDF2>=3.0.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
]
