[project]
name = "searcher-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "openai-agents>=0.2.4",
    "openai>=1.98.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.2",
    # TODO: remove Peewee dependency once legacy file is deleted
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "arxiv>=2.1.3",
    "feedparser>=6.0.11",
    "PyPDF2>=3.0.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "duckduckgo-search>=6.3.3",
    "loguru>=0.7.3",
    "fastapi>=0.112.1",
    "uvicorn[standard]>=0.30.5",
    "pydantic>=2.8.2",
    "ddgs>=9.5.2",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.8",
    "sphinx>=8.2.3",
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autodoc-typehints>=2.5.0",
    "pytest>=8.3.2",
    "httpx>=0.27.2",
]

